added more portugal words

--- a/indexB.html
+++ b/indexB.html
@@ -156,126 +156,126 @@
 
     <script>
         const wordPairs = `
-        baby	bebé
-back	espalda
-background	fondo
-bad	malo
+        baby	bebê
+back	costas
+background	fundo
+bad	mau
 badly	mal
 bag	bolsa
-balance	equilibrio
-ball	pelota
+balance	equilíbrio
+ball	bola
 band	banda
 bank	banco
-bare	desnudo
-barely	apenas
+bare	nu
+barely	mal
 basket	cesta
-bathroom	baño
-battle	batalla
-beach	playa
-beam	rayo
-beast	bestia
-beautiful	hermoso
-beauty	belleza
+bathroom	banheiro
+battle	batalha
+beach	praia
+beam	raio
+beast	besta
+beautiful	bonito
+beauty	beleza
 because	porque
 bed	cama
-bedroom	dormitorio
-beer	cerveza
+bedroom	quarto
+beer	cerveja
 before	antes
-beginning	comienzo
-behind	detrás
+beginning	começo
+behind	atrás
 being	ser
-belief	creencia
-bell	campana
+belief	crença
+bell	sino
 belly	barriga
-below	debajo
-belt	cinturón
+below	abaixo
+belt	cinto
 bench	banco
-beneath	debajo de
-benefit	beneficio
-beside	al lado de
-besides	además
+beneath	debaixo de
+benefit	benefício
+beside	ao lado de
+besides	além disso
 between	entre
-beyond	más allá
+beyond	além
 big	grande
-bill	factura
-bird	pájaro
-birth	nacimiento
-bit	trozo
+bill	conta
+bird	pássaro
+birth	nascimento
+bit	pedaço
 bitter	amargo
-black	negro
-blade	hoja
-blanket	manta
-blind	ciego
-block	bloque
-blood	sangre
-bloody	sangriento
+black	preto
+blade	lâmina
+blanket	cobertor
+blind	cego
+block	bloco
+blood	sangue
+bloody	sangrento
 blue	azul
-board	tabla
-boat	bote
-body	cuerpo
-bone	hueso
-book	libro
+board	tábua
+boat	barco
+body	corpo
+bone	osso
+book	livro
 boot	bota
-border	frontera
+border	fronteira
 both	ambos
-bottle	botella
-bottom	fondo
-bound	atado
-bowl	cuenco
-box	caja
-boy	chico
-brain	cerebro
-branch	rama
-brave	valiente
-bread	pan
-breakfast	desayuno
-breast	pecho
-breath	aliento
+bottle	garrafa
+bottom	fundo
+bound	amarrado
+bowl	tigela
+box	caixa
+boy	menino
+brain	cérebro
+branch	galho
+brave	corajoso
+bread	pão
+breakfast	café da manhã
+breast	peito
+breath	fôlego
 breeze	brisa
-bridge	puente
-bright	brillante
-brilliant	brillante
-British	británico
-broad	amplio
-broken	roto
-brother	hermano
-brow	ceño
-brown	marrón
-building	edificio
+bridge	ponte
+bright	brilhante
+brilliant	brilhante
+British	britânico
+broad	amplo
+broken	quebrado
+brother	irmão
+brow	testa
+brown	marrom
+building	prédio
 bullet	bala
-bus	autobús
+bus	ônibus
 bush	arbusto
-business	negocio
+business	negócio
 busy	ocupado
-but	pero
-button	botón
+but	mas
+button	botão
 by	por
 to be	ser
-to bear	soportar
-to beat	golpear
-to become	convertirse
-to beg	suplicar
-to begin	comenzar
-to believe	creer
-to belong	pertenecer
-to bend	doblar
+to bear	suportar
+to beat	bater
+to become	tornar-se
+to beg	implorar
+to begin	começar
+to believe	acreditar
+to belong	pertencer
+to bend	dobrar
 to bet	apostar
-to betray	traicionar
+to betray	trair
 to bid	ofertar
 to bite	morder
 to blame	culpar
-to blink	parpadear
-to blow	soplar
-to bore	aburrir
-to bother	molestar
-to bow	inclinarse
-to break	romper
+to blink	piscar
+to blow	assoprar
+to bore	entediar
+to bother	incomodar
+to bow	inclinar-se
+to break	quebrar
 to breathe	respirar
-to bring	traer
-to brush	cepillar
+to bring	trazer
+to brush	escovar
 to build	construir
-to burn	quemar
-to burst	estallar
+to burn	queimar
+to burst	explodir
 to bury	enterrar
 to buy	comprar
 
