--- a/indexBucket.html
+++ b/indexBucket.html
@@ -12,103 +12,104 @@
 
     <script>
         const wordPairs = `
-                In a distant valley surrounded by tall mountains, there was a village where every household had a special bucket.	En un valle lejano rodeado de altas montañas, había un pueblo donde cada hogar tenía un cubo especial.
-These buckets were not ordinary; they were passed down from generation to generation.	Estos cubos no eran comunes; se pasaban de generación en generación.
-Each bucket had a unique design, carefully carved and painted by its original owner.	Cada cubo tenía un diseño único, cuidadosamente tallado y pintado por su dueño original.
-The villagers believed that the buckets held the spirit of their ancestors.	Los aldeanos creían que los cubos contenían el espíritu de sus antepasados.
-Children were taught from a young age to respect and care for the family bucket.	A los niños se les enseñaba desde pequeños a respetar y cuidar el cubo familiar.
-Every morning, people walked to the crystal-clear river that ran through the village.	Cada mañana, la gente caminaba hacia el río cristalino que atravesaba el pueblo.
-They filled their buckets with fresh water, singing old songs as they walked back home.	Llenaban sus cubos con agua fresca, cantando canciones antiguas mientras regresaban a casa.
-One day, a boy named Timo accidentally dropped his bucket, and it cracked.	Un día, un niño llamado Timo dejó caer su cubo por accidente, y este se agrietó.
-He tried to hide the damage, fearing that he had dishonored his family.	Intentó ocultar el daño, temiendo haber deshonrado a su familia.
-But the crack grew larger each time he used the bucket.	Pero la grieta se hacía más grande cada vez que usaba el cubo.
-Eventually, water leaked so badly that the bucket was nearly useless.	Finalmente, el agua se filtraba tanto que el cubo era casi inútil.
-Timo was ashamed, and he avoided the river, pretending to be sick.	Timo estaba avergonzado y evitaba el río, fingiendo estar enfermo.
-His mother, Amalia, noticed and gently asked him what was wrong.	Su madre, Amalia, lo notó y le preguntó suavemente qué le pasaba.
-With tears in his eyes, Timo confessed everything.	Con lágrimas en los ojos, Timo confesó todo.
-Instead of scolding him, Amalia smiled and said, “Let’s fix it together.”	En lugar de regañarlo, Amalia sonrió y dijo: “Vamos a arreglarlo juntos.”
-She showed Timo how to patch the crack with resin from the trees.	Le mostró a Timo cómo reparar la grieta con resina de los árboles.
-They also added small metal bands around the bucket for extra support.	También añadieron pequeñas bandas metálicas alrededor del cubo para darle más soporte.
-Though it still leaked a little, it was usable again.	Aunque aún goteaba un poco, se podía usar nuevamente.
-“Now this bucket tells a story,” Amalia said. “It shows that mistakes can be mended.”	“Ahora este cubo cuenta una historia,” dijo Amalia. “Demuestra que los errores se pueden corregir.”
-Timo began to walk proudly to the river again.	Timo volvió a caminar con orgullo hacia el río.
-Other children asked about the metal bands, and Timo shared the story with pride.	Otros niños preguntaron sobre las bandas metálicas, y Timo compartió la historia con orgullo.
-Soon, many villagers began decorating their buckets with symbols of their personal stories.	Pronto, muchos aldeanos comenzaron a decorar sus cubos con símbolos de sus historias personales.
-Buckets became not just tools, but storytellers of the village’s past and present.	Los cubos se convirtieron no solo en herramientas, sino en narradores del pasado y presente del pueblo.
-A council was formed to record each bucket’s history in the village library.	Se formó un consejo para registrar la historia de cada cubo en la biblioteca del pueblo.
-The cracked buckets were no longer hidden—they were honored.	Los cubos agrietados ya no se escondían—eran honrados.
-Each imperfection was seen as a lesson, a memory, a badge of life.	Cada imperfección era vista como una lección, un recuerdo, una insignia de la vida.
-Timo, once a shy boy, grew up to be the village’s youngest bucket historian.	Timo, que antes era un niño tímido, creció hasta convertirse en el historiador de cubos más joven del pueblo.
-He taught others that even broken things have value, and that history lives in what we carry.	Enseñó a otros que incluso las cosas rotas tienen valor, y que la historia vive en lo que llevamos.
-And so, the buckets continued to pass from hand to hand, each one richer in meaning than the last.	Y así, los cubos continuaron pasando de mano en mano, cada uno más lleno de significado que el anterior.
-valley	valle
-mountains	montañas
-village	pueblo
-household	hogar
-special bucket	cubo especial
-passed down	se pasaban
-generation	generación
-unique design	diseño único
-carved	tallado
+               English	Brazilian Portuguese
+In a distant valley surrounded by tall mountains, there was a village where every household had a special bucket.	Em um vale distante cercado por altas montanhas, havia uma aldeia onde cada lar tinha um balde especial.
+These buckets were not ordinary; they were passed down from generation to generation.	Esses baldes não eram comuns; eles eram passados de geração em geração.
+Each bucket had a unique design, carefully carved and painted by its original owner.	Cada balde tinha um design único, cuidadosamente entalhado e pintado pelo seu dono original.
+The villagers believed that the buckets held the spirit of their ancestors.	Os aldeões acreditavam que os baldes continham o espírito de seus antepassados.
+Children were taught from a young age to respect and care for the family bucket.	As crianças eram ensinadas desde pequenas a respeitar e cuidar do balde da família.
+Every morning, people walked to the crystal-clear river that ran through the village.	Toda manhã, as pessoas caminhavam até o rio cristalino que atravessava a aldeia.
+They filled their buckets with fresh water, singing old songs as they walked back home.	Eles enchiam seus baldes com água fresca, cantando canções antigas enquanto voltavam para casa.
+One day, a boy named Timo accidentally dropped his bucket, and it cracked.	Um dia, um menino chamado Timo deixou cair seu balde por acidente, e ele rachou.
+He tried to hide the damage, fearing that he had dishonored his family.	Ele tentou esconder o dano, com medo de ter desonrado sua família.
+But the crack grew larger each time he used the bucket.	Mas a rachadura crescia a cada vez que ele usava o balde.
+Eventually, water leaked so badly that the bucket was nearly useless.	Eventualmente, a água vazava tanto que o balde estava quase inútil.
+Timo was ashamed, and he avoided the river, pretending to be sick.	Timo estava envergonhado e evitava o rio, fingindo estar doente.
+His mother, Amalia, noticed and gently asked him what was wrong.	Sua mãe, Amalia, percebeu e perguntou suavemente o que havia de errado.
+With tears in his eyes, Timo confessed everything.	Com lágrimas nos olhos, Timo confessou tudo.
+Instead of scolding him, Amalia smiled and said, “Let’s fix it together.”	Em vez de repreendê-lo, Amalia sorriu e disse: “Vamos consertar juntos.”
+She showed Timo how to patch the crack with resin from the trees.	Ela mostrou a Timo como remendar a rachadura com resina das árvores.
+They also added small metal bands around the bucket for extra support.	Eles também colocaram pequenas faixas metálicas ao redor do balde para dar mais suporte.
+Though it still leaked a little, it was usable again.	Embora ainda vazasse um pouco, podia ser usado novamente.
+“Now this bucket tells a story,” Amalia said. “It shows that mistakes can be mended.”	“Agora este balde conta uma história,” disse Amalia. “Mostra que erros podem ser corrigidos.”
+Timo began to walk proudly to the river again.	Timo voltou a caminhar com orgulho até o rio.
+Other children asked about the metal bands, and Timo shared the story with pride.	Outras crianças perguntaram sobre as faixas metálicas, e Timo compartilhou a história com orgulho.
+Soon, many villagers began decorating their buckets with symbols of their personal stories.	Logo, muitos aldeões começaram a decorar seus baldes com símbolos de suas histórias pessoais.
+Buckets became not just tools, but storytellers of the village’s past and present.	Os baldes tornaram-se não apenas ferramentas, mas contadores de histórias do passado e presente da aldeia.
+A council was formed to record each bucket’s history in the village library.	Foi formado um conselho para registrar a história de cada balde na biblioteca da aldeia.
+The cracked buckets were no longer hidden—they were honored.	Os baldes rachados não eram mais escondidos — eram honrados.
+Each imperfection was seen as a lesson, a memory, a badge of life.	Cada imperfeição era vista como uma lição, uma memória, uma insígnia da vida.
+Timo, once a shy boy, grew up to be the village’s youngest bucket historian.	Timo, que antes era um menino tímido, cresceu e se tornou o historiador de baldes mais jovem da aldeia.
+He taught others that even broken things have value, and that history lives in what we carry.	Ele ensinou aos outros que mesmo as coisas quebradas têm valor, e que a história vive no que carregamos.
+And so, the buckets continued to pass from hand to hand, each one richer in meaning than the last.	E assim, os baldes continuaram passando de mão em mão, cada um mais cheio de significado que o anterior.
+valley	vale
+mountains	montanhas
+village	aldeia / vila
+household	lar / residência
+special bucket	balde especial
+passed down	passado de geração em geração
+generation	geração
+unique design	design único
+carved	entalhado
 painted	pintado
-original owner	dueño original
-villagers	aldeanos
-spirit	espíritu
-ancestors	antepasados
-children	niños
-respect	respetar
+original owner	dono original
+villagers	aldeões
+spirit	espírito
+ancestors	antepassados
+children	crianças
+respect	respeitar
 care for	cuidar
-crystal-clear river	río cristalino
-filled	llenaban
-fresh water	agua fresca
-old songs	canciones antiguas
-dropped	dejó caer
-cracked	se agrietó
-hide	ocultar
-damage	daño
-dishonored	deshonrado
-crack	grieta
-leaked	se filtraba
+crystal-clear river	rio cristalino
+filled	enchiam
+fresh water	água fresca
+old songs	canções antigas
+dropped	deixou cair
+cracked	rachou
+hide	esconder
+damage	dano
+dishonored	desonrado
+crack	rachadura
+leaked	vazava
 useless	inútil
-ashamed	avergonzado
-avoided	evitaba
-pretending	fingiendo
-sick	estar enfermo
-noticed	lo notó
-confessed	confesó
-scolding	regañarlo
-fix	arreglar
-patch	reparar / remendar
+ashamed	envergonhado
+avoided	evitava
+pretending	fingindo
+sick	doente
+noticed	percebeu
+confessed	confessou
+scolding	bronca / repreensão
+fix	consertar
+patch	remendar / reparar
 resin	resina
-trees	árboles
-metal bands	bandas metálicas
-support	soporte
-usable	se podía usar
-tells a story	cuenta una historia
-mistakes	errores
-mended	corregir / reparar
-proudly	con orgullo
+trees	árvores
+metal bands	faixas metálicas
+support	suporte
+usable	utilizável / usável
+tells a story	conta uma história
+mistakes	erros
+mended	consertado / corrigido
+proudly	com orgulho
 symbols	símbolos
-personal stories	historias personales
-tools	herramientas
-storytellers	narradores
-past and present	pasado y presente
-council	consejo
-history	historia
+personal stories	histórias pessoais
+tools	ferramentas
+storytellers	contadores de histórias
+past and present	passado e presente
+council	conselho
+history	história
 library	biblioteca
-cracked buckets	cubos agrietados
+cracked buckets	baldes rachados
 honored	honrados
-imperfection	imperfección
-lesson	lección
-memory	recuerdo
-badge of life	insignia de la vida
-shy boy	niño tímido
-bucket historian	historiador de cubos
-broken things	cosas rotas
-have value	tienen valor
-history lives	la historia vive
-carry	llevamos
-hand to hand	de mano en mano
+imperfection	imperfeição
+lesson	lição
+memory	memória
+badge of life	insígnia da vida
+shy boy	menino tímido
+bucket historian	historiador de baldes
+broken things	coisas quebradas
+have value	têm valor
+history lives	a história vive
+carry	carregar
+hand to hand	de mão em mão
 meaning	significado
         `;
 
