--- a/indexC.html
+++ b/indexC.html
@@ -15,179 +15,179 @@
 
     <script>
         const wordPairs = `
-       cabin	cabaña
-cake	pastel
-calm	tranquilo
-camera	cámara
-camp	campamento
+cabin	cabana
+cake	bolo
+calm	calmo
+camera	câmera
+camp	acampamento
 candle	vela
-cap	gorra
+cap	boné
 capable	capaz
-captain	capitán
-car	coche
-card	tarjeta
-career	carrera
+captain	capitão
+car	carro
+card	cartão
+career	carreira
 careful	cuidadoso
 carefully	cuidadosamente
-carriage	carruaje
+carriage	carruagem
 case	caso
-castle	castillo
+castle	castelo
 cat	gato
-cave	cueva
-ceiling	techo
-cell	celda
+cave	caverna
+ceiling	teto
+cell	cela
 center	centro
-century	siglo
-certain	cierto
-certainly	ciertamente
-chain	cadena
-chair	silla
-challenge	desafío
-chamber	cámara
-chance	oportunidad
+century	século
+certain	certo
+certainly	certamente
+chain	corrente
+chair	cadeira
+challenge	desafio
+chamber	câmara
+chance	oportunidade
 chapter	capítulo
-character	personaje
+character	personagem
 charge	cargo
-charm	encanto
-cheek	mejilla
-chest	pecho
-chicken	pollo
-chief	jefe
-child	niño
-childhood	infancia
-chin	barbilla
-Chinese	chino
-choice	elección
+charm	charme
+cheek	bochecha
+chest	peito
+chicken	frango
+chief	chefe
+child	criança
+childhood	infância
+chin	queixo
+Chinese	chinês
+choice	escolha
 Christ	Cristo
-Christian	cristiano
-Christmas	Navidad
-church	iglesia
-cigarette	cigarrillo
+Christian	cristão
+Christmas	Natal
+church	igreja
+cigarette	cigarro
 circle	círculo
-circumstance	circunstancia
-citizen	ciudadano
-city	ciudad
-class	clase
-clean	limpio
+circumstance	circunstância
+citizen	cidadão
+city	cidade
+class	classe
+clean	limpo
 clear	claro
 clearly	claramente
-clerk	empleado
+clerk	empregado
 client	cliente
-clock	reloj
-closely	de cerca
-cloth	tela
-clothes	ropa
-cloud	nube
+clock	relógio
+closely	de perto
+cloth	tecido
+clothes	roupas
+cloud	nuvem
 coast	costa
-coat	abrigo
+coat	casaco
 coffee	café
-cold	frío
-college	universidad
-colour	color
-comfort	comodidad
-comfortable	cómodo
+cold	frio
+college	universidade
+colour	cor
+comfort	conforto
+comfortable	confortável
 command	comando
-comment	comentario
-common	común
-community	comunidad
-companion	compañero
+comment	comentário
+common	comum
+community	comunidade
+companion	companheiro
 company	empresa
 complete	completo
 completely	completamente
-computer	computadora
-conclusion	conclusión
-condition	condición
-confidence	confianza
-confusion	confusión
-connection	conexión
+computer	computador
+conclusion	conclusão
+condition	condição
+confidence	confiança
+confusion	confusão
+connection	conexão
 conscious	consciente
-consciousness	conciencia
-consequence	consecuencia
-contact	contacto
-content	contenido
-control	control
-conversation	conversación
+consciousness	consciência
+consequence	consequência
+contact	contato
+content	conteúdo
+control	controle
+conversation	conversa
 cool	fresco
-cop	policía
+cop	policial
 corner	esquina
-correct	correcto
-corridor	pasillo
-cost	costo
-cottage	cabaña
+correct	correto
+corridor	corredor
+cost	custo
+cottage	cabana
 couch	sofá
-could	podría
-counter	mostrador
+could	poderia
+counter	balcão
 country	país
-couple	pareja
-courage	coraje
+couple	casal
+courage	coragem
 course	curso
-court	corte
+court	tribunal
 cousin	primo
 cow	vaca
-crazy	loco
+crazy	louco
 creature	criatura
 credit	crédito
-crew	tripulación
-crime	crimen
-crowd	multitud
-crown	corona
+crew	tripulação
+crime	crime
+crowd	multidão
+crown	coroa
 culture	cultura
-cup	taza
-curiosity	curiosidad
+cup	xícara
+curiosity	curiosidade
 curious	curioso
-current	actual
+current	atual
 curtain	cortina
 curve	curva
-custom	costumbre
-to call	llamar
+custom	costume
+to call	chamar
 to can	poder
 to capture	capturar
 to care	cuidar
-to carry	llevar
-to cast	lanzar
-to catch	atrapar
+to carry	levar
+to cast	lançar
+to catch	pegar
 to cause	causar
-to cease	cesar
-to change	cambiar
+to cease	cessar
+to change	mudar
 to chase	perseguir
 to check	verificar
-to choose	elegir
-to chuckle	reírse suavemente
-to claim	reclamar
+to choose	escolher
+to chuckle	rir suavemente
+to claim	reivindicar
 to climb	escalar
-to cling	aferrarse
-to close	cerrar
+to cling	agarrar-se
+to close	fechar
 to clutch	agarrar
-to collect	coleccionar
-to come	venir
-to commit	comprometer
+to collect	colecionar
+to come	vir
+to commit	cometer
 to compare	comparar
-to complain	quejarse
+to complain	reclamar
 to conceal	ocultar
 to concern	preocupar
 to conclude	concluir
-to conduct	llevar a cabo
-to confess	confesar
+to conduct	conduzir
+to confess	confessar
 to confirm	confirmar
 to confuse	confundir
 to connect	conectar
 to consider	considerar
-to contain	contener
+to contain	conter
 to continue	continuar
 to convince	convencer
-to cook	cocinar
+to cook	cozinhar
 to count	contar
-to cover	cubrir
-to crack	agrietar
-to crash	chocar
-to crawl	gatear
-to create	crear
-to creep	arrastrarse
+to cover	cobrir
+to crack	rachar
+to crash	colidir
+to crawl	engatinhar
+to create	criar
+to creep	rastejar
 to cross	cruzar
-to crush	aplastar
-to cry	llorar
-to curl	rizar
-to curse	maldecir
+to crush	esmagar
+to cry	chorar
+to curl	enrolar
+to curse	amaldiçoar
 to cut	cortar
 
         `;
@@ -197,7 +197,7 @@ to cut	cortar
         document.getElementById('start').addEventListener('click', () => {
             const outputDiv = document.getElementById('output');
             outputDiv.innerHTML = ''; // Clear previous output
-            
+
    words.forEach(([english, portuguese]) => {
                 outputDiv.innerHTML += `<p>${english} - ${portuguese}</p>`;
                 speakWord(english, 'en-US');      // English audio
