--- a/indexClock.html
+++ b/indexClock.html
@@ -12,112 +12,112 @@
 
     <script>
         const wordPairs = `
-            In the center of a quiet town stood an old clock shop with dusty windows and a wooden sign that read “Tiempo Eterno.”	En el centro de un pueblo tranquilo había una antigua relojería con ventanas polvorientas y un cartel de madera que decía “Tiempo Eterno.”
-The shop was owned by Señor Calderón, a mysterious man who had lived there longer than anyone could remember.	La tienda era propiedad del Señor Calderón, un hombre misterioso que había vivido allí más tiempo del que cualquiera podía recordar.
-His hair was silver, his glasses always foggy, and his hands moved with delicate precision.	Su cabello era plateado, sus gafas siempre empañadas, y sus manos se movían con delicada precisión.
-Inside the shop, hundreds of clocks ticked in harmony, filling the air with a soft, rhythmic hum.	Dentro de la tienda, cientos de relojes marcaban el tiempo en armonía, llenando el aire con un suave zumbido rítmico.
-There were wall clocks, pocket watches, grandfather clocks, and strange ones shaped like birds and moons.	Había relojes de pared, relojes de bolsillo, relojes de pie y otros extraños con forma de aves y lunas.
-Most people came only to look, but some whispered that Señor Calderón could fix time itself.	La mayoría venía solo a mirar, pero algunos susurraban que el Señor Calderón podía arreglar el tiempo mismo.
-One rainy afternoon, a boy named Mateo entered the shop carrying a broken alarm clock.	Una tarde lluviosa, un niño llamado Mateo entró en la tienda con un despertador roto.
-“It belonged to my grandfather,” he said. “It stopped the day he died.”	“Pertenecía a mi abuelo,” dijo. “Se detuvo el día que murió.”
-Señor Calderón took the clock gently and examined it under a warm lamp.	El Señor Calderón tomó el reloj con cuidado y lo examinó bajo una lámpara cálida.
-“Not every clock stops because it is broken,” he murmured.	“No todos los relojes se detienen porque están rotos,” murmuró.
-Mateo watched in silence as the old man opened the clock and began working.	Mateo observaba en silencio mientras el anciano abría el reloj y comenzaba a trabajar.
-Tiny gears, springs, and screws lay scattered like puzzle pieces.	Pequeños engranajes, resortes y tornillos yacían esparcidos como piezas de un rompecabezas.
-As the hands of the shop’s clocks moved forward, the past seemed to come alive.	Mientras las manecillas de los relojes de la tienda avanzaban, el pasado parecía cobrar vida.
-“Your grandfather came here once, many years ago,” Señor Calderón said.	“Tu abuelo vino aquí una vez, hace muchos años,” dijo el Señor Calderón.
-“He left something behind, something you must find.”	“Dejó algo atrás, algo que debes encontrar.”
-He pointed to a dusty drawer at the bottom of a tall cabinet.	Señaló un cajón polvoriento en la parte inferior de un gabinete alto.
-Mateo opened it and found a small golden key, warm to the touch.	Mateo lo abrió y encontró una pequeña llave dorada, cálida al tacto.
-“This opens a special clock,” Calderón explained. “But only when you’re ready.”	“Esto abre un reloj especial,” explicó Calderón. “Pero solo cuando estés listo.”
-Years passed, and Mateo grew into a young man, never forgetting the key.	Pasaron los años, y Mateo se convirtió en un joven, sin olvidar nunca la llave.
-After Señor Calderón passed away, Mateo inherited the shop.	Después de que el Señor Calderón falleció, Mateo heredó la tienda.
-The clocks continued to tick, as if nothing had changed.	Los relojes seguían marcando el tiempo, como si nada hubiera cambiado.
-One night, while cleaning the workshop, he discovered a hidden door behind a shelf.	Una noche, mientras limpiaba el taller, descubrió una puerta oculta detrás de una estantería.
-Using the golden key, he unlocked the door and entered a room filled with clocks that had no hands.	Usando la llave dorada, abrió la puerta y entró en una habitación llena de relojes sin manecillas.
-In the center stood a single clock, larger than the rest, with a glowing face.	En el centro había un solo reloj, más grande que los demás, con una cara resplandeciente.
-As Mateo approached, the clock began to tick.	Cuando Mateo se acercó, el reloj comenzó a marcar.
-He felt memories rushing through him—his grandfather’s laughter, his childhood games, the moment he first entered the shop.	Sintió cómo los recuerdos lo atravesaban—la risa de su abuelo, sus juegos de infancia, el momento en que entró por primera vez a la tienda.
-The clock wasn’t counting seconds—it was measuring moments.	El reloj no contaba segundos—medía momentos.
-From then on, Mateo used the shop not just to fix timepieces, but to help people remember.	Desde entonces, Mateo usaba la tienda no solo para reparar relojes, sino para ayudar a las personas a recordar.
-He repaired the watch of a woman who missed her son, and the broken clock of a man who had forgotten how to smile.	Reparó el reloj de una mujer que extrañaba a su hijo, y el reloj roto de un hombre que había olvidado cómo sonreír.
-Each time he turned a gear, something inside them turned too.	Cada vez que giraba un engranaje, algo dentro de ellos también giraba.
-People began calling him “El nuevo relojero de los recuerdos.”	La gente comenzó a llamarlo “El nuevo relojero de los recuerdos.”
-And just like Señor Calderón, Mateo said little, but listened closely to time.	Y al igual que el Señor Calderón, Mateo hablaba poco, pero escuchaba atentamente al tiempo.
-Outside, the town grew busier and louder, but inside the shop, time moved softly.	Afuera, el pueblo se volvía más ocupado y ruidoso, pero dentro de la tienda, el tiempo se movía suavemente.
-One day, a small girl entered, holding a broken pocket watch.	Un día, una niña pequeña entró, sosteniendo un reloj de bolsillo roto.
-“It stopped when my grandma passed,” she whispered.	“Se detuvo cuando murió mi abuela,” susurró.
-Mateo smiled gently and said, “Let’s see what we can do.”	Mateo sonrió con dulzura y dijo: “Veamos qué podemos hacer.”
-And so the legacy of the clockmaker continued, one tick at a time.	Y así continuó el legado del relojero, un tic a la vez.
-passed away	falleció
-inherited	heredó
-shop	tienda
-clocks	relojes
+        In the center of a quiet town stood an old clock shop with dusty windows and a wooden sign that read “Tiempo Eterno.”	No centro de uma cidade tranquila havia uma antiga loja de relógios com janelas empoeiradas e uma placa de madeira que dizia “Tiempo Eterno.”
+The shop was owned by Señor Calderón, a mysterious man who had lived there longer than anyone could remember.	A loja era propriedade do Senhor Calderón, um homem misterioso que morava lá há mais tempo do que qualquer um podia lembrar.
+His hair was silver, his glasses always foggy, and his hands moved with delicate precision.	Seu cabelo era prateado, seus óculos sempre embaçados, e suas mãos se moviam com delicada precisão.
+Inside the shop, hundreds of clocks ticked in harmony, filling the air with a soft, rhythmic hum.	Dentro da loja, centenas de relógios marcavam o tempo em harmonia, enchendo o ar com um zumbido rítmico suave.
+There were wall clocks, pocket watches, grandfather clocks, and strange ones shaped like birds and moons.	Havia relógios de parede, relógios de bolso, relógios de chão e outros estranhos em forma de pássaros e luas.
+Most people came only to look, but some whispered that Señor Calderón could fix time itself.	A maioria vinha apenas para olhar, mas alguns sussurravam que o Senhor Calderón podia consertar o tempo em si.
+One rainy afternoon, a boy named Mateo entered the shop carrying a broken alarm clock.	Em uma tarde chuvosa, um menino chamado Mateo entrou na loja carregando um despertador quebrado.
+“It belonged to my grandfather,” he said. “It stopped the day he died.”	“Pertencia ao meu avô,” ele disse. “Parou no dia em que ele morreu.”
+Señor Calderón took the clock gently and examined it under a warm lamp.	O Senhor Calderón pegou o relógio cuidadosamente e o examinou sob uma lâmpada quente.
+“Not every clock stops because it is broken,” he murmured.	“Nem todo relógio para porque está quebrado,” ele murmurou.
+Mateo watched in silence as the old man opened the clock and began working.	Mateo observava em silêncio enquanto o velho abria o relógio e começava a trabalhar.
+Tiny gears, springs, and screws lay scattered like puzzle pieces.	Pequenas engrenagens, molas e parafusos estavam espalhados como peças de um quebra-cabeça.
+As the hands of the shop’s clocks moved forward, the past seemed to come alive.	Enquanto os ponteiros dos relógios da loja avançavam, o passado parecia ganhar vida.
+“Your grandfather came here once, many years ago,” Señor Calderón said.	“Seu avô veio aqui uma vez, há muitos anos,” disse o Senhor Calderón.
+“He left something behind, something you must find.”	“Ele deixou algo para trás, algo que você deve encontrar.”
+He pointed to a dusty drawer at the bottom of a tall cabinet.	Ele apontou para uma gaveta empoeirada na parte inferior de um armário alto.
+Mateo opened it and found a small golden key, warm to the touch.	Mateo a abriu e encontrou uma pequena chave dourada, quente ao toque.
+“This opens a special clock,” Calderón explained. “But only when you’re ready.”	“Isso abre um relógio especial,” explicou Calderón. “Mas só quando você estiver pronto.”
+Years passed, and Mateo grew into a young man, never forgetting the key.	Os anos passaram, e Mateo se tornou um jovem, nunca esquecendo a chave.
+After Señor Calderón passed away, Mateo inherited the shop.	Depois que o Senhor Calderón faleceu, Mateo herdou a loja.
+The clocks continued to tick, as if nothing had changed.	Os relógios continuaram a marcar o tempo, como se nada tivesse mudado.
+One night, while cleaning the workshop, he discovered a hidden door behind a shelf.	Uma noite, enquanto limpava a oficina, ele descobriu uma porta oculta atrás de uma estante.
+Using the golden key, he unlocked the door and entered a room filled with clocks that had no hands.	Usando a chave dourada, ele destrancou a porta e entrou em uma sala cheia de relógios sem ponteiros.
+In the center stood a single clock, larger than the rest, with a glowing face.	No centro havia um único relógio, maior que os outros, com um mostrador luminoso.
+As Mateo approached, the clock began to tick.	Quando Mateo se aproximou, o relógio começou a marcar.
+He felt memories rushing through him—his grandfather’s laughter, his childhood games, the moment he first entered the shop.	Ele sentiu memórias passando por ele — a risada do avô, seus jogos de infância, o momento em que entrou pela primeira vez na loja.
+The clock wasn’t counting seconds—it was measuring moments.	O relógio não contava segundos — ele media momentos.
+From then on, Mateo used the shop not just to fix timepieces, but to help people remember.	Desde então, Mateo usava a loja não só para consertar relógios, mas para ajudar as pessoas a lembrar.
+He repaired the watch of a woman who missed her son, and the broken clock of a man who had forgotten how to smile.	Ele consertou o relógio de uma mulher que sentia falta do filho, e o relógio quebrado de um homem que havia esquecido como sorrir.
+Each time he turned a gear, something inside them turned too.	Cada vez que ele girava uma engrenagem, algo dentro deles também girava.
+People began calling him “El nuevo relojero de los recuerdos.”	As pessoas começaram a chamá-lo de “El nuevo relojero de los recuerdos.”
+And just like Señor Calderón, Mateo said little, but listened closely to time.	E assim como o Senhor Calderón, Mateo falava pouco, mas escutava atentamente o tempo.
+Outside, the town grew busier and louder, but inside the shop, time moved softly.	Lá fora, a cidade ficava mais movimentada e barulhenta, mas dentro da loja, o tempo se movia suavemente.
+One day, a small girl entered, holding a broken pocket watch.	Um dia, uma menina pequena entrou segurando um relógio de bolso quebrado.
+“It stopped when my grandma passed,” she whispered.	“Parou quando minha avó faleceu,” ela sussurrou.
+Mateo smiled gently and said, “Let’s see what we can do.”	Mateo sorriu com delicadeza e disse: “Vamos ver o que podemos fazer.”
+And so the legacy of the clockmaker continued, one tick at a time.	E assim continuou o legado do relojoeiro, um tic de cada vez.
+passed away	faleceu
+inherited	herdou
+shop	loja
+clocks	relógios
 tick	marcar
-changed	cambiado
-night	noche
-cleaning	limpiaba
-workshop	taller
-discovered	descubrió
+changed	mudado
+night	noite
+cleaning	limpando
+workshop	oficina
+discovered	descobriu
 hidden	oculta
-door	puerta
-shelf	estantería
-golden key	llave dorada
-unlocked	abrió
-entered	entró
-room	habitación
-filled	llena
-hands (of clock)	manecillas
+door	porta
+shelf	estante
+golden key	chave dourada
+unlocked	destrancou
+entered	entrou
+room	sala
+filled	cheia
+hands (of clock)	ponteiros
 center	centro
-single	solo
-clock	reloj
-larger	más grande
-glowing face	cara resplandeciente
-approached	se acercó
-memories	recuerdos
-grandfather	abuelo
-laughter	risa
-childhood	infancia
-games	juegos
+single	único
+clock	relógio
+larger	maior
+glowing face	mostrador luminoso
+approached	se aproximou
+memories	memórias
+grandfather	avô
+laughter	risada
+childhood	infância
+games	jogos
 moment	momento
-counting	contaba
+counting	contava
 seconds	segundos
-measuring	medía
+measuring	media
 moments	momentos
-fix	reparar
-timepieces	relojes
-help	ayudar
-remember	recordar
-repaired	reparó
-watch	reloj
-woman	mujer
-missed	extrañaba
-son	hijo
-broken	roto
-man	hombre
-forgotten	olvidado
-smile	sonreír
-gear	engranaje
-turned	giraba
-people	gente
-calling	llamarlo
-clockmaker	relojero
-said	hablaba
-listened	escuchaba
-time	tiempo
-town	pueblo
-busier	más ocupado
-louder	más ruidoso
+fix	consertar
+timepieces	relógios
+help	ajudar
+remember	lembrar
+repaired	consertou
+watch	relógio
+woman	mulher
+missed	sentia falta
+son	filho
+broken	quebrado
+man	homem
+forgotten	esquecido
+smile	sorrir
+gear	engrenagem
+turned	girava
+people	pessoas
+calling	chamando
+clockmaker	relojoeiro
+said	falou
+listened	escutava
+time	tempo
+town	cidade
+busier	mais movimentada
+louder	mais barulhenta
 softly	suavemente
-girl	niña
-pocket watch	reloj de bolsillo
-stopped	se detuvo
-grandma	abuela
-whispered	susurró
-smiled	sonrió
-gently	con dulzura
+girl	menina
+pocket watch	relógio de bolso
+stopped	parou
+grandma	avó
+whispered	sussurrou
+smiled	sorriu
+gently	com delicadeza
 legacy	legado
-continued	continuó
+continued	continuou
 tick (noun)	tic
         `;
 
