--- a/indexClothing.html
+++ b/indexClothing.html
@@ -12,88 +12,89 @@
 
     <script>
         const wordPairs = `
-    The Ramirez family was getting ready for their yearly trip to the mountains.	La familia Ramírez se estaba preparando para su viaje anual a las montañas.
-Everyone was excited, especially the kids.	Todos estaban emocionados, especialmente los niños.
-Each person had to pack their own clothes this time.	Cada persona tenía que empacar su propia ropa esta vez.
-Ana packed five T-shirts, all with colorful designs.	Ana empacó cinco camisetas, todas con diseños coloridos.
-Her brother Luis packed three pairs of jeans, just in case it got cold.	Su hermano Luis empacó tres pares de vaqueros, por si acaso hacía frío.
-Their mother reminded them not to forget socks and underwear.	Su madre les recordó que no olvidaran los calcetines y la ropa interior.
-“You’ll need clean socks every day!” she said.	“¡Necesitarán calcetines limpios todos los días!” dijo ella.
-Their father polished his hiking shoes the night before.	Su padre lustró sus zapatos de senderismo la noche anterior.
-He also packed an extra pair of sandals for walking around the cabin.	También empacó un par extra de sandalias para caminar por la cabaña.
-The youngest child, Mateo, wanted to bring his red boots.	El hijo menor, Mateo, quería llevar sus botas rojas.
-“They make me feel like a superhero,” he said proudly.	“Me hacen sentir como un superhéroe,” dijo con orgullo.
-Everyone packed jackets, because the weather in the mountains could change quickly.	Todos empacaron chaquetas, porque el clima en las montañas podía cambiar rápidamente.
-Ana added her favorite scarf and a pair of soft gloves to her bag.	Ana agregó su bufanda favorita y un par de guantes suaves a su bolsa.
-Luis took his baseball cap, which he wore almost every day.	Luis llevó su gorra de béisbol, que usaba casi todos los días.
-Their mom brought wide-brimmed hats to protect everyone from the sun.	Su mamá llevó sombreros de ala ancha para proteger a todos del sol.
-That night, before they left, they all wore warm pajamas.	Esa noche, antes de salir, todos usaron pijamas calientes.
-“We leave early in the morning,” their dad reminded them.	“Salimos temprano por la mañana,” les recordó su padre.
-In the car, the back seat was full of bags and clothes.	En el coche, el asiento trasero estaba lleno de bolsas y ropa.
-They sang songs, shared snacks, and enjoyed the ride through winding roads.	Cantaron canciones, compartieron bocadillos y disfrutaron del viaje por caminos sinuosos.
-Once they arrived at the cabin, they each unpacked their clothes into drawers.	Una vez que llegaron a la cabaña, cada uno desempacó su ropa en los cajones.
-Luis immediately changed into his jeans and shoes to go exploring.	Luis se cambió de inmediato a sus vaqueros y zapatos para ir a explorar.
-Ana wrapped her scarf around her neck and stepped outside.	Ana se envolvió la bufanda alrededor del cuello y salió afuera.
-The air was crisp, and they could see snow on the distant peaks.	El aire era fresco y podían ver nieve en los picos lejanos.
-That evening, they all wore their jackets and gloves as they sat around the fire.	Esa noche, todos usaron sus chaquetas y guantes mientras se sentaban alrededor del fuego.
-Mateo showed off his boots by stomping through the muddy path.	Mateo mostró sus botas pisoteando por el sendero embarrado.
-“Careful!” his mom warned, laughing. “Those are your only clean shoes.”	“¡Cuidado!” advirtió su madre, riendo. “Esos son tus únicos zapatos limpios.”
-Before bed, they all changed into their pajamas and talked about the day.	Antes de acostarse, todos se pusieron sus pijamas y hablaron sobre el día.
-“Don’t forget your socks tomorrow,” said Ana to Luis.	“No olvides tus calcetines mañana,” le dijo Ana a Luis.
-The whole family felt warm and cozy, ready for the next day’s adventures.	Toda la familia se sentía cálida y cómoda, lista para las aventuras del día siguiente.
-family	familia
-trip	viaje
-mountains	montañas
+ The Ramirez family was getting ready for their yearly trip to the mountains.	A família Ramírez estava se preparando para sua viagem anual às montanhas.
+Everyone was excited, especially the kids.	Todos estavam emocionados, especialmente as crianças.
+Each person had to pack their own clothes this time.	Cada pessoa tinha que empacotar sua própria roupa desta vez.
+Ana packed five T-shirts, all with colorful designs.	Ana empacotou cinco camisetas, todas com desenhos coloridos.
+Her brother Luis packed three pairs of jeans, just in case it got cold.	Seu irmão Luis empacotou três pares de jeans, caso fizesse frio.
+Their mother reminded them not to forget socks and underwear.	A mãe deles lembrou que não esquecessem as meias e a roupa íntima.
+“You’ll need clean socks every day!” she said.	“Vocês vão precisar de meias limpas todos os dias!” ela disse.
+Their father polished his hiking shoes the night before.	O pai deles lustrou seus sapatos de trilha na noite anterior.
+He also packed an extra pair of sandals for walking around the cabin.	Ele também empacotou um par extra de sandálias para andar pela cabana.
+The youngest child, Mateo, wanted to bring his red boots.	O filho mais novo, Mateo, queria levar suas botas vermelhas.
+“They make me feel like a superhero,” he said proudly.	“Elas me fazem sentir como um super-herói,” ele disse orgulhoso.
+Everyone packed jackets, because the weather in the mountains could change quickly.	Todos empacotaram jaquetas, porque o clima nas montanhas podia mudar rapidamente.
+Ana added her favorite scarf and a pair of soft gloves to her bag.	Ana adicionou seu cachecol favorito e um par de luvas macias à sua bolsa.
+Luis took his baseball cap, which he wore almost every day.	Luis levou sua boné de beisebol, que usava quase todos os dias.
+Their mom brought wide-brimmed hats to protect everyone from the sun.	A mãe deles trouxe chapéus de abas largas para proteger todos do sol.
+That night, before they left, they all wore warm pajamas.	Naquela noite, antes de sair, todos vestiram pijamas quentes.
+“We leave early in the morning,” their dad reminded them.	“Saímos cedo pela manhã,” o pai deles lembrou.
+In the car, the back seat was full of bags and clothes.	No carro, o banco de trás estava cheio de bolsas e roupas.
+They sang songs, shared snacks, and enjoyed the ride through winding roads.	Eles cantaram canções, compartilharam lanches e aproveitaram a viagem por estradas sinuosas.
+Once they arrived at the cabin, they each unpacked their clothes into drawers.	Quando chegaram à cabana, cada um desempacotou suas roupas nas gavetas.
+Luis immediately changed into his jeans and shoes to go exploring.	Luis imediatamente trocou para seus jeans e sapatos para ir explorar.
+Ana wrapped her scarf around her neck and stepped outside.	Ana enrolou seu cachecol ao redor do pescoço e saiu para fora.
+The air was crisp, and they could see snow on the distant peaks.	O ar estava fresco, e eles podiam ver neve nos picos distantes.
+That evening, they all wore their jackets and gloves as they sat around the fire.	Naquela noite, todos usaram suas jaquetas e luvas enquanto se sentavam ao redor do fogo.
+Mateo showed off his boots by stomping through the muddy path.	Mateo mostrou suas botas pisando forte pelo caminho enlameado.
+“Careful!” his mom warned, laughing. “Those are your only clean shoes.”	“Cuidado!” advertiu sua mãe, rindo. “Esses são seus únicos sapatos limpos.”
+Before bed, they all changed into their pajamas and talked about the day.	Antes de dormir, todos trocaram de pijamas e conversaram sobre o dia.
+“Don’t forget your socks tomorrow,” said Ana to Luis.	“Não esqueça suas meias amanhã,” disse Ana para Luis.
+The whole family felt warm and cozy, ready for the next day’s adventures.	Toda a família se sentia aquecida e confortável, pronta para as aventuras do dia seguinte.
+
+English Word/Phrase	Brazilian Portuguese
+family	família
+trip	viagem
+mountains	montanhas
 excited	emocionados
-kids	niños
-person	persona
-pack	empacar
-clothes	ropa
+kids	crianças
+person	pessoa
+pack	empacotar
+clothes	roupa
 T-shirts	camisetas
-designs	diseños
-jeans	vaqueros
-cold	frío
-socks	calcetines
-underwear	ropa interior
-clean	limpios
-shoes	zapatos
-hiking shoes	zapatos de senderismo
-sandals	sandalias
-cabin	cabaña
+designs	desenhos
+jeans	jeans
+cold	frio
+socks	meias
+underwear	roupa íntima
+clean	limpas
+shoes	sapatos
+hiking shoes	sapatos de trilha
+sandals	sandálias
+cabin	cabana
 boots	botas
-superhero	superhéroe
-jackets	chaquetas
+superhero	super-herói
+jackets	jaquetas
 weather	clima
-scarf	bufanda
-gloves	guantes
+scarf	cachecol
+gloves	luvas
 bag	bolsa
-cap / baseball cap	gorra / gorra de béisbol
-hats	sombreros
+cap / baseball cap	boné / boné de beisebol
+hats	chapéus
 sun	sol
 pajamas	pijamas
-morning	mañana
-car	coche
-seat	asiento
+morning	manhã
+car	carro
+seat	banco
 bags	bolsas
-songs	canciones
-snacks	bocadillos
-ride	viaje
-roads	caminos
-cabin	cabaña
-unpacked	desempacó
-drawers	cajones
+songs	canções
+snacks	lanches
+ride	viagem
+roads	estradas
+unpacked	desempacotou
+drawers	gavetas
 exploring	explorar
-neck	cuello
-air	aire
-snow	nieve
+neck	pescoço
+air	ar
+snow	neve
 peaks	picos
-fire	fuego
-muddy path	sendero embarrado
+fire	fogo
+muddy path	caminho enlameado
 careful	cuidado
-bed	cama
-day	día
-warm	cálida
-cozy	cómoda
+bed	dormir
+day	dia
+warm	aquecida
+cozy	confortável
 adventures	aventuras
         `;
 
