--- a/indexQ.html
+++ b/indexQ.html
@@ -12,13 +12,13 @@
 
     <script>
         const wordPairs = `
-              quality	calidad
-quarter	cuarto
-queen	reina
-question	pregunta
+            quality	qualidade
+quarter	quarto (1/4)
+queen	rainha
+question	pergunta
 quick	rápido
-quickly	rápidamente
-quiet	tranquilo
+quickly	rapidamente
+quiet	quieto / tranquilo
 quietly	silenciosamente
 quite	bastante
         `;
@@ -29,10 +29,10 @@ quite	bastante
             const outputDiv = document.getElementById('output');
             outputDiv.innerHTML = ''; // Clear previous output
 
-            words.forEach(([english, spanish]) => {
-                outputDiv.innerHTML += `<p>${english} - ${spanish}</p>`;
-                speakWord(english, 'en-US'); // English audio
-                speakWord(spanish, 'es-ES'); // Spanish audio
+      words.forEach(([english, portuguese]) => {
+                outputDiv.innerHTML += `<p>${english} - ${portuguese}</p>`;
+                speakWord(english, 'en-US');      // English audio
+                speakWord(portuguese, 'pt-PT');   // Portuguese audio (you can change to 'pt-BR' if needed)
             });
         });
 
