--- a/indexS.html
+++ b/indexS.html
@@ -12,278 +12,244 @@
 
     <script>
         const wordPairs = `
-         sacrifice	sacrificio
+sacrifice	sacrifício
 sad	triste
-saddle	silla de montar
+saddle	sela
 safe	seguro
-safety	seguridad
+safety	segurança
 sake	motivo
-same	mismo
-sand	arena
-satisfaction	satisfacción
+same	mesmo
+sand	areia
+satisfaction	satisfação
 Saturday	sábado
-scarcely	escasamente
-scene	escena
-scent	aroma
-school	escuela
-science	ciencia
-screen	pantalla
+scarcely	dificilmente / mal
+scene	cena
+scent	aroma / cheiro
+school	escola
+science	ciência
+screen	tela
 sea	mar
-season	estación
-seat	asiento
+season	estação
+seat	assento
 seated	sentado
 second	segundo
-secret	secreto
-section	sección
-security	seguridad
-sensation	sensación
+secret	segredo
+section	seção
+security	segurança
+sensation	sensação
 sense	sentido
-sentence	oración
-series	serie
-serious	serio
+sentence	frase / sentença
+series	série
+serious	sério
 seriously	seriamente
-servant	sirviente
-service	servicio
-seven	siete
-several	varios
+servant	servo / empregado
+service	serviço
+seven	sete
+several	vários
 sex	sexo
-shade	sombra
-shadow	sombra
-shame	vergüenza
+shade	sombra (de proteção)
+shadow	sombra (forma)
+shame	vergonha
 shape	forma
-sharp	afilado
-sharply	agudamente
-she	ella
-sheet	hoja
-shell	concha
-shelter	refugio
-ship	barco
+sharp	afiado / agudo
+sharply	nitidamente / bruscamente
+she	ela
+sheet	folha / lençol
+shell	concha / casco
+shelter	abrigo
+ship	navio
 shirt	camisa
-shit	caca
+shit	merda
 shock	choque
-shoe	zapato
-shop	tienda
+shoe	sapato
+shop	loja
 shore	costa
-short	corto
-shot	disparo
-should	debería
-shoulder	hombro
-shower	ducha
-sick	enfermo
+short	curto
+shot	tiro
+should	deveria
+shoulder	ombro
+shower	chuveiro
+sick	doente
 side	lado
-sight	vista
-sign	signo
-signal	señal
-silence	silencio
+sight	visão
+sign	sinal
+signal	sinal
+silence	silêncio
 silent	silencioso
 silently	silenciosamente
 silk	seda
-silly	tonto
-silver	plata
-simple	simple
-simply	simplemente
+silly	bobo
+silver	prata
+simple	simples
+simply	simplesmente
 sin	pecado
 since	desde
-single	soltero
-sir	señor
-sister	hermana
-situation	situación
+single	solteiro / único
+sir	senhor
+sister	irmã
+situation	situação
 six	seis
-size	tamaño
-skill	habilidad
-skin	piel
-skirt	falda
-sky	cielo
-slave	esclavo
-sleeve	manga
-slight	ligero
-slightly	ligeramente
-slope	pendiente
+size	tamanho
+skill	habilidade
+skin	pele
+skirt	saia
+sky	céu
+slave	escravo
+sleeve	manga (de roupa)
+slight	leve / pequeno
+slightly	levemente
+slope	inclinação
 slow	lento
 slowly	lentamente
-small	pequeño
-smart	inteligente
-smoke	humo
-smooth	suave
-snow	nieve
-so	así
-society	sociedad
+small	pequeno
+smart	inteligente / esperto
+smoke	fumaça
+smooth	suave / liso
+snow	neve
+so	então / tão
+society	sociedade
 sofa	sofá
-soft	blando
+soft	macio
 softly	suavemente
 soldier	soldado
 solid	sólido
-some	algunos
-somebody	alguien
-somehow	de alguna manera
-someone	alguien
+some	algum / alguns
+somebody	alguém
+somehow	de algum modo
+someone	alguém
 something	algo
-sometimes	a veces
-somewhat	algo
-somewhere	en alguna parte
-son	hijo
-song	canción
-soon	pronto
+sometimes	às vezes
+somewhat	um pouco / de certa forma
+somewhere	em algum lugar
+son	filho
+song	canção
+soon	logo
 sorrow	tristeza
-sorry	lo siento
+sorry	desculpe / sinto muito
 sort	tipo
 soul	alma
-sound	sonido
-source	fuente
-south	sur
-space	espacio
-Spanish	español
+sound	som
+source	fonte
+south	sul
+space	espaço
+Spanish	espanhol
 special	especial
 speech	discurso
-speed	velocidad
-spell	deletrear
-spirit	espíritu
-spite	rencor
-spot	mancha
+speed	velocidade
+spell	soletrar
+spirit	espírito
+spite	despeito / rancor
+spot	local / mancha
 spring	primavera
-square	cuadrado
-staff	personal
-stage	escenario
-stair	escalera
-standard	estándar
-star	estrella
+square	quadrado / praça
+staff	equipe / pessoal
+stage	palco / fase
+stair	degrau / escada
+standard	padrão / norma
+star	estrela
 state	estado
-statement	declaración
-station	estación
-steady	constante
-steel	acero
-step	paso
-still	todavía
-stock	inventario
-stomach	estómago
-stone	piedra
-store	tienda
-storm	tormenta
-story	historia
-straight	recto
-strange	extraño
-stranger	extraño
-stream	arroyo
-street	calle
-strength	fuerza
-string	cuerda
-stroke	golpe
-strong	fuerte
-structure	estructura
-student	estudiante
-stuff	cosas
-stupid	estúpido
+statement	declaração
+station	estação
+steady	estável / constante
+steel	aço
+step	passo
+still	ainda
+stock	estoque
+stomach	estômago
+stone	pedra
+store	loja
+storm	tempestade
+story	história
+straight	reto / direto
+strange	estranho
+stranger	estranho (pessoa)
+stream	riacho / fluxo
+street	rua
+strength	força
+string	corda / barbante
+stroke	derrame / golpe
+strong	forte
+structure	estrutura
+student	estudante
+stuff	coisas / tralhas
+stupid	estúpido / burro
 style	estilo
-subject	sujeto
-success	éxito
-successful	exitoso
-such	tal
+subject	assunto / matéria
+success	sucesso
+successful	bem-sucedido
+such	tal / tão
 sudden	repentino
 suddenly	de repente
-suggestion	sugerencia
-suit	traje
-sum	suma
-summer	verano
+suggestion	sugestão
+suit	terno
+sum	soma
+summer	verão
 sun	sol
 Sunday	domingo
-supper	cena
-supply	suministro
-sure	seguro
-surely	seguramente
-surface	superficie
-suspicion	sospecha
-sweat	sudor
-sweet	dulce
+supper	jantar (refeição leve)
+supply	suprimento
+sure	certo / seguro
+surely	certamente
+surface	superfície
+suspicion	suspeita
+sweat	suor
+sweet	doce
 sword	espada
-sympathy	simpatía
+sympathy	simpatia / compaixão
 system	sistema
 to sail	navegar
-to satisfy	satisfacer
+to satisfy	satisfazer
 to save	salvar
-to say	decir
-to scare	asustar
-to scratch	rasguñar
+to say	dizer
+to scare	assustar
+to scratch	arranhar / coçar
 to scream	gritar
-to search	buscar
-to secure	asegurar
+to search	procurar / buscar
+to secure	garantir / proteger
 to see	ver
 to seek	buscar
 to seem	parecer
-to seize	apoderarse
+to seize	agarrar / apreender
 to sell	vender
 to send	enviar
 to separate	separar
 to serve	servir
-to set	establecer
-to settle	asentarse
+to set	estabelecer / pôr
+to settle	resolver / estabelecer-se
 to shake	sacudir
-to shall	deber
-to share	compartir
-to shed	derramar
-to shift	cambiar
-to shine	brillar
-to shiver	temblar
-to shoot	disparar
+to shall	deverá (forma modal arcaica)
+to share	compartilhar
+to shed	derramar / soltar
+to shift	mudar
+to shine	brilhar
+to shiver	tremer
+to shoot	atirar
 to shout	gritar
-to shove	empujar
+to shove	empurrar bruscamente
 to show	mostrar
-to shrug	encoger los hombros
-to shudder	estremecerse
-to shut	cerrar
+to shrug	encolher os ombros
+to shudder	estremecer
+to shut	fechar
 to sigh	suspirar
 to sing	cantar
-to sink	hundir
-to sip	sorber
-to sit	sentarse
-to slam	cerrar de golpe
-to slap	abofetear
+to sink	afundar
+to sip	bebericar / sorver
+to sit	sentar
+to slam	bater / fechar com força
+to slap	dar um tapa
 to sleep	dormir
 to slide	deslizar
-to slip	resbalar
-to smell	oler
-to smile	sonreír
-to snap	chasquear
-to sob	sollozar
-to spare	ahorrar
-to speak	hablar
-to spend	gastar
+to slip	escorregar
+to smell	cheirar
+to smile	sorrir
+to snap	estalar / quebrar com estalo
+to sob	soluçar
+to spare	poupar / economizar
+to speak	falar
+to spend	gastar / passar (tempo)
 to spin	girar
-to spread	esparcir
-to squeeze	apretar
-to stand	estar de pie
-to stare	mirar fijamente
-to start	empezar
-to startle	asustar
-to stay	quedarse
-to steal	robar
-to stick	pegar
-to stir	revolver
-to stop	detener
-to strain	esforzar
-to stretch	estirar
-to stride	zancada
-to strike	golpear
-to strip	desnudarse
-to struggle	luchar
-to study	estudiar
-to stumble	tropezar
-to succeed	tener éxito
-to suck	chupar
-to suffer	sufrir
-to suggest	sugerir
-to support	apoyar
-to suppose	suponer
-to surprise	sorprender
-to surround	rodear
-to survive	sobrevivir
-to suspect	sospechar
-to swallow	tragar
-to swear	jurar
-to sweep	barrer
-to swell	hinchar
-to swim	nadar
-to swing	balancear
-to switch	cambiar
+to spread	espalhar
+to squeeze	apertar / espremer
         `;
 
         const words = wordPairs.trim().split('\n').map(line => line.split('\t'));
@@ -292,10 +258,10 @@ to switch	cambiar
             const outputDiv = document.getElementById('output');
             outputDiv.innerHTML = ''; // Clear previous output
 
-            words.forEach(([english, spanish]) => {
-                outputDiv.innerHTML += `<p>${english} - ${spanish}</p>`;
-                speakWord(english, 'en-US'); // English audio
-                speakWord(spanish, 'es-ES'); // Spanish audio
+             words.forEach(([english, portuguese]) => {
+                outputDiv.innerHTML += `<p>${english} - ${portuguese}</p>`;
+                speakWord(english, 'en-US');      // English audio
+                speakWord(portuguese, 'pt-PT');   // Portuguese audio (you can change to 'pt-BR' if needed)
             });
         });
 
