--- a/indexConjucations.html
+++ b/indexConjucations.html
@@ -12,100 +12,79 @@
 
     <script>
         const wordPairs = `
-Simple Present To Be
-I am	soy
-You are	eres
-He/She/It is	es
+English Conjugation	Brazilian Portuguese
+Simple Present To Be	
+I am	sou
+You are	és
+He/She/It is	é
 We are	somos
-They are	son
-Simple Past	To Be
+They are	são
+Simple Past To Be	
 I was	fui
-You were	fuiste
-He/She/It was	fue
-We were	fuimos
-They were	fueron
-Simple Future To Be
-I will be	seré
+You were	foste
+He/She/It was	foi
+We were	fomos
+They were	foram
+Simple Future To Be	
+I will be	serei
 You will be	serás
 He/She/It will be	será
 We will be	seremos
-They will be	serán
-Simple Present Temorary Version	
-I am	Estoy
+They will be	serão
+Simple Present Temporary Version	
+I am	Estou
 You are	Estás
 He/She/It is	Está
 We are	Estamos
-They are	Están
-Simple Past	Temporary Version
-I was	Estuve
-You were	Estuviste
-He/She/It was	Estuvo
-We were	Estuvimos
-They were	Estuvieron
-Simple Future Temporay Version
-I will be	Estaré
+They are	Estão
+Simple Past Temporary Version	
+I was	Estive
+You were	Estiveste
+He/She/It was	Esteve
+We were	Estivemos
+They were	Estiveram
+Simple Future Temporary Version	
+I will be	Estarei
 You will be	Estarás
 He/She/It will be	Estará
 We will be	Estaremos
-They will be	Estarán
-
-English Conjugation	Spanish Translation
-Simple Present to Have	
-I have	tengo
-You have	tienes
-He/She/It has	tiene
-We have	tenemos
-They have	tienen
-Simple Past	
-I had	tuve
-You had	tuviste
-He/She/It had	tuvo
-We had	tuvimos
-They had	tuvieron
-Simple Future	
-I will have	tendré
-You will have	tendrás
-He/She/It will have	tendrá
-We will have	tendremos
-They will have	tendrán
-
-Simple Present	
-I have	tengo
-You have	tienes
-He/She/It has	tiene
-We have	tenemos
-They have	tienen
-Simple Past	
-I had	tuve
-You had	tuviste
-He/She/It had	tuvo
-We had	tuvimos
-They had	tuvieron
-Simple Future	
-I will have	tendré
-You will have	tendrás
-He/She/It will have	tendrá
-We will have	tendremos
-They will have	tendrán
-
-Simple Present	
-I make	hago
-You make	haces
-He/She/It makes	hace
-We make	hacemos
-They make	hacen
-Simple Past	
-I made	hice
-You made	hiciste
-He/She/It made	hizo
-We made	hicimos
-They made	hicieron
-Simple Future	
-I will make	haré
-You will make	harás
-He/She/It will make	hará
-We will make	haremos
-They will make	harán
+They will be	Estarão
+Simple Present To Have	
+I have	tenho
+You have	tens
+He/She/It has	tem
+We have	temos
+They have	têm
+Simple Past To Have	
+I had	tive
+You had	tiveste
+He/She/It had	teve
+We had	tivemos
+They had	tiveram
+Simple Future To Have	
+I will have	terei
+You will have	terás
+He/She/It will have	terá
+We will have	teremos
+They will have	terão
+Simple Present To Make	
+I make	faço
+You make	fazes
+He/She/It makes	faz
+We make	fazemos
+They make	fazem
+Simple Past To Make	
+I made	fiz
+You made	fizeste
+He/She/It made	fez
+We made	fizemos
+They made	fizeram
+Simple Future To Make	
+I will make	farei
+You will make	farás
+He/She/It will make	fará
+We will make	faremos
+They will make	farão
 
 
         `;
@@ -116,10 +95,10 @@ They will make	harán
             const outputDiv = document.getElementById('output');
             outputDiv.innerHTML = ''; // Clear previous output
 
-            words.forEach(([english, spanish]) => {
-                outputDiv.innerHTML += `<p>${english} - ${spanish}</p>`;
-                speakWord(english, 'en-US'); // English audio
-                speakWord(spanish, 'es-ES'); // Spanish audio
+                  words.forEach(([english, portuguese]) => {
+                outputDiv.innerHTML += `<p>${english} - ${portuguese}</p>`;
+                speakWord(english, 'en-US');      // English audio
+                speakWord(portuguese, 'pt-PT');   // Portuguese audio (you can change to 'pt-BR' if needed)
             });
         });
 
