--- a/indexConjugations3.html
+++ b/indexConjugations3.html
@@ -12,101 +12,97 @@
 
     <script>
         const wordPairs = `
-        Simple Present	
-I give	doy
-You give	das
-He/She/It gives	da
+English Conjugation	Brazilian Portuguese Translation
+Simple Present To Give	
+I give	dou
+You give	dás
+He/She/It gives	dá
 We give	damos
-They give	dan
-Simple Past	
-I gave	di
-You gave	diste
-He/She/It gave	dio
-We gave	dimos
-They gave	dieron
-Simple Future	
-I will give	daré
+They give	dão
+Simple Past To Give	
+I gave	dei
+You gave	deste
+He/She/It gave	deu
+We gave	demos
+They gave	deram
+Simple Future To Give	
+I will give	darei
 You will give	darás
 He/She/It will give	dará
 We will give	daremos
-They will give	darán
-
-Simple Present	
-I know	sé
+They will give	darão
+Simple Present To Know	
+I know	sei
 You know	sabes
 He/She/It knows	sabe
 We know	sabemos
-They know	saben
-Simple Past	
-I knew	supe
-You knew	supiste
-He/She/It knew	supo
-We knew	supimos
-They knew	supieron
-Simple Future	
-I will know	sabré
-You will know	sabrás
-He/She/It will know	sabrá
-We will know	sabremos
-They will know	sabrán
-
-Simple Present	
-I want	quiero
-You want	quieres
-He/She/It wants	quiere
+They know	sabem
+Simple Past To Know	
+I knew	soube
+You knew	soubeste
+He/She/It knew	soube
+We knew	soubemos
+They knew	souberam
+Simple Future To Know	
+I will know	saberei
+You will know	saberás
+He/She/It will know	saberá
+We will know	saberemos
+They will know	saberão
+Simple Present To Want	
+I want	quero
+You want	queres
+He/She/It wants	quer
 We want	queremos
-They want	quieren
-Simple Past	
-I wanted	quise
-You wanted	quisiste
-He/She/It wanted	quiso
-We wanted	quisimos
-They wanted	quisieron
-Simple Future	
-I will want	querré
-You will want	querrás
-He/She/It will want	querrá
-We will want	querremos
-They will want	querrán
-
-Simple Present	
-I arrive	llego
-You arrive	llegas
-He/She/It arrives	llega
-We arrive	llegamos
-They arrive	llegan
-Simple Past	
-I arrived	llegué
-You arrived	llegaste
-He/She/It arrived	llegó
-We arrived	llegamos
-They arrived	llegaron
-Simple Future	
-I will arrive	llegaré
-You will arrive	llegarás
-He/She/It will arrive	llegará
-We will arrive	llegaremos
-They will arrive	llegarán
-
-Simple Present	
-I pass	paso
-You pass	pasas
-He/She/It passes	pasa
-We pass	pasamos
-They pass	pasan
-Simple Past	
-I passed	pasé
-You passed	pasaste
-He/She/It passed	pasó
-We passed	pasamos
-They passed	pasaron
-Simple Future	
-I will pass	pasaré
-You will pass	pasarás
-He/She/It will pass	pasará
-We will pass	pasaremos
-They will pass	pasarán
-
+They want	querem
+Simple Past To Want	
+I wanted	quis
+You wanted	quiseste
+He/She/It wanted	quis
+We wanted	quisemos
+They wanted	quiseram
+Simple Future To Want	
+I will want	quererei
+You will want	quererás
+He/She/It will want	quererá
+We will want	quereremos
+They will want	quererão
+Simple Present To Arrive	
+I arrive	chego
+You arrive	chegas
+He/She/It arrives	chega
+We arrive	chegamos
+They arrive	chegam
+Simple Past To Arrive	
+I arrived	cheguei
+You arrived	chegaste
+He/She/It arrived	chegou
+We arrived	chegamos
+They arrived	chegaram
+Simple Future To Arrive	
+I will arrive	chegarei
+You will arrive	chegarás
+He/She/It will arrive	chegará
+We will arrive	chegaremos
+They will arrive	chegarão
+Simple Present To Pass	
+I pass	passo
+You pass	passas
+He/She/It passes	passa
+We pass	passamos
+They pass	passam
+Simple Past To Pass	
+I passed	passe
+You passed	passaste
+He/She/It passed	passou
+We passed	passamos
+They passed	passaram
+Simple Future To Pass	
+I will pass	passarei
+You will pass	passarás
+He/She/It will pass	passará
+We will pass	passaremos
+They will pass	passarão
 
         `;
 
@@ -116,10 +112,10 @@ They will pass	pasarán
             const outputDiv = document.getElementById('output');
             outputDiv.innerHTML = ''; // Clear previous output
 
-            words.forEach(([english, spanish]) => {
-                outputDiv.innerHTML += `<p>${english} - ${spanish}</p>`;
-                speakWord(english, 'en-US'); // English audio
-                speakWord(spanish, 'es-ES'); // Spanish audio
+                     words.forEach(([english, portuguese]) => {
+                outputDiv.innerHTML += `<p>${english} - ${portuguese}</p>`;
+                speakWord(english, 'en-US');      // English audio
+                speakWord(portuguese, 'pt-PT');   // Portuguese audio (you can change to 'pt-BR' if needed)
             });
         });
 
