--- a/indexO.html
+++ b/indexO.html
@@ -12,54 +12,54 @@
 
     <script>
         const wordPairs = `
-        o’clock	en punto
+o’clock	em ponto
 object	objeto
-obvious	obvio
+obvious	óbvio
 obviously	obviamente
-occasion	ocasión
-ocean	océano
-odd	impar
+occasion	ocasião
+ocean	oceano
+odd	ímpar / estranho
 of	de
-off	apagado
-office	oficina
+off	desligado
+office	escritório
 officer	oficial
 official	oficial
-often	a menudo
-oil	aceite
-okay	está bien
-old	viejo
-on	en
-once	una vez
-one	uno
-only	solo
-onto	sobre
-opening	apertura
-operation	operación
-opinion	opinión
-opportunity	oportunidad
-opposite	opuesto
-or	o
-order	orden
-ordinary	ordinario
-other	otro
-others	otros
-otherwise	de otro modo
-our	nuestro
-ourselves	nosotros mismos
-out	fuera
-outside	afuera
-over	sobre
-own	propio
-owner	propietario
-to oblige	obligar
+often	frequentemente
+oil	óleo
+okay	tudo bem / ok
+old	velho
+on	em / ligado
+once	uma vez
+one	um
+only	apenas / só
+onto	em cima de
+opening	abertura
+operation	operação
+opinion	opinião
+opportunity	oportunidade
+opposite	oposto
+or	ou
+order	ordem
+ordinary	comum / ordinário
+other	outro
+others	outros
+otherwise	caso contrário / senão
+our	nosso
+ourselves	nós mesmos
+out	fora
+outside	do lado de fora / fora
+over	sobre / por cima
+own	próprio
+owner	proprietário
+to oblige	obrigar
 to observe	observar
-to obtain	obtener
+to obtain	obter
 to occupy	ocupar
-to occur	ocurrir
-to offer	ofrecer
+to occur	ocorrer
+to offer	oferecer
 to open	abrir
-to ought	deber
-to owe	deber
+to ought	dever (no sentido moral)
+to owe	dever (estar em dívida)
         `;
 
         const words = wordPairs.trim().split('\n').map(line => line.split('\t'));
@@ -68,10 +68,10 @@ to owe	deber
             const outputDiv = document.getElementById('output');
             outputDiv.innerHTML = ''; // Clear previous output
 
-            words.forEach(([english, spanish]) => {
-                outputDiv.innerHTML += `<p>${english} - ${spanish}</p>`;
-                speakWord(english, 'en-US'); // English audio
-                speakWord(spanish, 'es-ES'); // Spanish audio
+                       words.forEach(([english, portuguese]) => {
+                outputDiv.innerHTML += `<p>${english} - ${portuguese}</p>`;
+                speakWord(english, 'en-US');      // English audio
+                speakWord(portuguese, 'pt-PT');   // Portuguese audio (you can change to 'pt-BR' if needed)
             });
         });
 
